2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* media.cpp|h:
	* mediaelement.cpp:
	* eventargs.cpp|h: Rename MarkerReachedEventArgs to
	TimelineMarkerRoutedEventArgs to better match managed code, and move
	the class to eventargs.cpp|h together with the rest of the event args
	classes.

	* type.h:
	* value.h:
	* cbinding.cpp|h:
	* type-generated.cpp: Regenerated.

2009-11-17  Larry Ewing  <lewing@novell.com>

	* brush.cpp:
	* multiscaleimage.cpp (RenderCollection): 
	* uielement.cpp (PostRender): Check the status of the pattern
	before trying to draw with it in case something has gone wrong.

	Fixes DRT 1 and and a couple of sites by not putting the cairo
	context into an invalid state.

2009-11-18  Larry Ewing  <lewing@novell.com>

	* frameworkelement.cpp: In measure make sure we track the last
	size we were measured at even if we are collapsed.
	In Arrange don't descend into the tree if we are not visible but
	track the last slot.

	r: rolf

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: ParseASX2: don't verify the end of the uri, there is
	no guarantee the uri has a specific ending.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaplayer.cpp: Open: Call SetSelected and ref on the video stream
	we actually select, and not all of video streams we loop over.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.h: Added LogReady event.

	* eventargs.cpp|h: Added a LogReadyRoutedEventArgs class.

	* enums.cpp|h: Added LogSource enum.

	* type.h:
	* value.h:
	* cbinding.h:
	* cbinding.cpp:
	* type-generated.cpp: Regenerated.

2009-11-18  Jeffrey Stedfast  <fejj@novell.com>

	Fix for drt #481

	* textbox.cpp (KeyPressPageUp, KeyPressPageDown): Silverlight
	seems to set these to handled even if no cursor change took place.

2009-11-18  Sebastien Pouliot  <sebastien@ximian.com>

	* security.c: Do not consider System.Xml.dll and Microsoft.
	VisualBasic.dll as platform code since, right now, they do not